<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/w3"
    tools:context="ui.view.ScoreActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_speed="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_result"
        android:layout_margin="60dp"
        android:textAppearance="@style/quiz_font"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:textStyle = "bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_throne_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:tint = "#EBECF0"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivThrone"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:maxHeight="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:focusable="false"
        android:paddingTop="0dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_throne_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAppearance="@style/quiz_font"
        android:textSize="20sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textAppearance="@style/quiz_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxLines = "1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHouse"
        android:text = "Targayen"
        android:gravity = "center"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/quiz_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/name"
        android:textAppearance="@style/quiz_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHouse">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:weightSum="7" />
    </HorizontalScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/new_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id = "@+id/btnReturnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/return_home"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>