<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/w"
    android:fitsSystemWindows="true"
    tools:context=".ui.view.QuizActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:gravity = "end"
        android:text="@string/app_name"
        android:textAppearance="@style/quiz_font"
        android:textSize="10sp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/back_alpha"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAppearance="@style/quiz_font"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="01"
            android:textAppearance="@style/quiz_font"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="/10"
            android:textAppearance="@style/quiz_font"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingBottom="10dp"
        >

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:max="30"
            android:progress="30"
            app:indicatorDirectionCircular="counterclockwise"
            app:trackCornerRadius="100dp"
            app:indicatorSize="90dp"
            app:indicatorColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTimeLimit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:textAppearance="@style/quiz_font"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle = "bold"
            android:gravity ="center"
            tools:text="30" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAppearance="@style/quiz_font"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        tools:text = "Who did the King Viserys marry after the death of his first wife Aemma?"
        android:textSize = "18sp"
        android:paddingLeft="10dp"
        android:background = "@drawable/back_alpha"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/chip"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            tools:text="Mysaria"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/chip"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            tools:text="Laena Velaryon"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/chip"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            tools:text="Alicent Hightower"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/chip"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            tools:text="Helaena"
            />
    </com.google.android.material.chip.ChipGroup>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/next"
            android:id="@+id/btnLinear"
            app:cornerRadius="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_highlight_off_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit_app"
                android:textAppearance="@style/quiz_font"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:text="@string/next"
            android:background = "@drawable/back_alpha_black"
            android:gravity="center"
            app:cornerRadius="15dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_swords_svgrepo_com" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id = "@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textAppearance="@style/quiz_font"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>